<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:backgroundTint="@android:color/transparent"
    android:backgroundTintMode="add"
    tools:context=".View.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E9658AF5"
        android:backgroundTint="#00D33838"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/loginbutton_round"
            android:text="Dang nhap"
            android:textAllCaps="false"
            android:textColor="#FDFDFD"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <Button
            android:id="@+id/btnSignInGoogle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/loginbutton_google"
            android:drawableLeft="@drawable/search"
            android:padding="10dp"
            android:text="@string/google"
            android:textColor="#FAF7F7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        </Button>

        <Button
            android:id="@+id/btnLoginFacebook"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/loginbutton_facebook"
            android:drawableLeft="@drawable/facebook"
            android:padding="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/facebook"
            app:layout_constraintEnd_toEndOf="@+id/btnSignInGoogle"
            app:layout_constraintStart_toStartOf="@+id/btnSignInGoogle"
            app:layout_constraintTop_toBottomOf="@+id/btnSignInGoogle">

        </Button>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="#5B60D8"
            android:drawableLeft="@drawable/user_account_box"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName|textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.449"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="#5B60D8"
            android:drawableLeft="@drawable/key"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPersonName|textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.449"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:text="Nhà Trọ"
            android:textColor="#FFFFFF"
            android:textSize="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Hoac"
            android:textAllCaps="false"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/txtQuenMk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/quenmk"
            android:textColor="#F8F2F2"
            android:textSize="15dp"
            app:layout_constraintEnd_toStartOf="@+id/txtDangKy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook" />

        <TextView
            android:id="@+id/txtDangKy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chuacotk"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtQuenMk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtQuenMk"
            app:layout_constraintTop_toTopOf="@+id/txtQuenMk" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="8dp"
            android:background="#F6EFEF"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="64dp"
            android:background="#F6EDED"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>