<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:backgroundTint="@android:color/transparent"
    android:backgroundTintMode="add"
    tools:context=".View.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E9658AF5"
        android:backgroundTint="#00D33838"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/loginbutton_round"
            android:text="Gui Email"
            android:textAllCaps="false"
            android:textColor="#FDFDFD"
            app:layout_constraintEnd_toEndOf="@+id/edtEmailForget"
            app:layout_constraintStart_toStartOf="@+id/edtEmailForget"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailForget" />

        <EditText
            android:id="@+id/edtEmailForget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="#5B60D8"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="Email "
            android:inputType="textPersonName|textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="Khoi phuc mat khau"
            android:textColor="#FFFFFF"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/chuoikhoiphucmatkhau"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/chuoithanhvien"
            app:layout_constraintEnd_toStartOf="@+id/txtRegisterForget"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btnSendEmail"
            app:layout_constraintTop_toBottomOf="@+id/btnSendEmail" />

        <TextView
            android:id="@+id/txtRegisterForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dangky"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/btnSendEmail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>