<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".View.Activity_chitietnhatro">

    <include
        layout="@layout/toolbar_layout"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="?attr/actionBarSize"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/like"
                android:text="@string/Thich"
                android:textAllCaps="false"
                android:background="@color/black"
                android:textColor="@color/white"
                android:paddingTop="5dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/maps_and_flags"
                android:text="@string/checkin"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:paddingTop="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:drawableTop="@drawable/satisfaction"
                android:text="@string/Binhluan"
                android:gravity="center"
                android:paddingTop="5dp"
                android:textAllCaps="false" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="@color/white"
                android:drawableTop="@drawable/bookmark"
                android:text="@string/Luulai"
                android:gravity="center"
                android:paddingTop="5dp"
                android:textAllCaps="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:background="@color/black"
                android:drawableTop="@drawable/back"
                android:text="@string/share"
                android:textAllCaps="false" />

        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestTedScrollChiTiet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white">
                >
                <ImageView
                    android:id="@+id/imgAnhChiTietNhaTro"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/images"
                    android:scaleType="fitXY"/>
                <TextView
                    android:id="@+id/txtTenNhatro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="nha t"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="123"
                            android:id="@+id/txtSoAnh"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/taianh"
                            android:textColor="@color/black"
                            android:id="@+id/txtTaiAnh"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="123"
                            android:id="@+id/txtSoCheckIn"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/checkin"
                            android:textColor="@color/black"
                            android:id="@+id/txtCheckIn"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="123"
                            android:id="@+id/txtSoBinhLuan"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Binhluan"
                            android:textColor="@color/black"
                            android:id="@+id/txtBinhLuan"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="123"
                            android:id="@+id/txtSoChiaSe"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Luulai"
                            android:textColor="@color/black"
                            android:id="@+id/txtLuuLai"/>

                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"/>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtThoiGianMoCua"
                        android:text="7:00 - 22:00"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtThoiGianDongCua"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:text="Chua mo cua" />
                </LinearLayout>
                <include layout="@layout/activity_tinhnangchitietquanan"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"/>
                <include layout="@layout/layout_wifi_chitietnhatro"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"/>
                <include layout="@layout/layout_binhluanchitietnhatro"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>